# alkhora-app

./: MANIFEST.in  WORKSPACE_GUIDE.md  build.json  dashboard_mockup.html  hooks.py  modules.txt  pyproject.toml  setup.py
management_dashboard/: BUILD_ISSUE_SUMMARY.md  DASHBOARD_PREVIEW.md  MANIFEST.in  README.md  hooks.py  modules.txt  package.json  pyproject.toml  setup.py
management_dashboard/api/: annual_summary.py
management_dashboard/doctype/dashboard_view_log/: dashboard_view_log.json
management_dashboard/doctype/kpi_definition/: kpi_definition.json
management_dashboard/management_dashboard/: __init__.py  module_def.json
management_dashboard/management_dashboard/api/: annual_summary.py
management_dashboard/management_dashboard/config/: desktop.py  management_dashboard.py
management_dashboard/management_dashboard/doctype/dashboard_view_log/: dashboard_view_log.py
management_dashboard/management_dashboard/doctype/kpi_definition/: kpi_definition.json  kpi_definition.py
management_dashboard/management_dashboard/management_dashboard/: __init__.py
management_dashboard/management_dashboard/page/: __init__.py
management_dashboard/management_dashboard/www/: management_dashboard.html
management_dashboard/page/management_dashboard/: management_dashboard.css  management_dashboard.js  management_dashboard.py
management_dashboard/public/: .gitkeep
management_dashboard/public/css/: index.css
management_dashboard/public/js/: .gitkeep  index.js  management_dashboard.bundle.js  management_dashboard.js
(+4 files in other folders)
