[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "management_dashboard"
version = "1.0.0"
description = "ALKHORA Company App"
requires-python = ">=3.10"
authors = [{ name = "ALKHORA", email = "support@alkhora.com" }]
dependencies = []

[tool.setuptools]
include-package-data = true

